--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
   line-height: 1.6;
   color: #222;
   background: #fff;
+  font-size: 22px;
 }
 
 header {
@@ -21,6 +22,7 @@ header .container {
   justify-content: space-between;
   align-items: center;
   padding: 16px 32px;
+  font-size: 30px;
 }
 
 header nav a {
@@ -32,13 +34,13 @@ header nav a {
 
 .hero {
   position: relative;
-  min-height: 90vh;
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
   color: #fff;
-  background: url('https://images.unsplash.com/photo-1507874457470-272b3c8d8ee2?auto=format&fit=crop&w=1500&q=80') center/cover no-repeat;
+  background: url('https://images.unsplash.com/photo-1563841930606-67e2bce48b78?q=80&w=2054&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') center/cover no-repeat;
 }
 
 .hero::after {
@@ -133,7 +135,7 @@ section {
 
 /* Event countdown section */
 .event-countdown {
-  background: #00eaff;
+  background: #bdbabf;
   text-align: center;
 }
 
@@ -142,3 +144,11 @@ section {
   grid-template-columns: repeat(auto-fit,minmax(260px,1fr));
   gap: 24px;
 }
+
+.gallery-grid {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr); /* 8 cột bằng nhau */
+    gap: 4px;
+    justify-content: center;
+    background-color: #78d035 center/cover;
+  }
